# RayTracing-One-Week

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeOptions.cmake  README.md
.github/workflows/: build.yml
cmake/: tools.cmake
include/: benchmark.h  camera.h  color.h  dielectric.h  hittable.h  hittable_list.h  lambertian.h  material.h  metal.h  ray.h  rtweekend.h  sphere.h  vec3.h
src/: CMakeLists.txt  camera.c  dielectric.c  hittable_list.c  lambertian.c  main.c  metal.c  sphere.c
